--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="main-game">
         <div class="genius">
-            <div class="yellow"></div>
-            <div class="red"></div>
-            <div class="blue"></div>
-            <div class="green"></div>
+            <div id="yellow"></div>
+            <div id="red"></div>
+            <div id="blue"></div>
+            <div id="green"></div>
         </div>
     </div>
     <script src="/js/script.js"></script>
